--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -32,8 +32,13 @@
     <dependency>
       <groupId>com.twitter.penguin</groupId>
       <artifactId>korean-text</artifactId>
-      <version>2.4.2</version>
+      <version>2.4.3-SNAPSHOT</version>
     </dependency>
+      <dependency>
+          <groupId>com.twitter</groupId>
+          <artifactId>twitter-text</artifactId>
+          <version>1.10.1</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
